--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
+    "axios": "^1.7.3",
+    "framer-motion": "^11.3.24",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
@@ -26,6 +30,7 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
