--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "axios": "^1.7.3",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
-    "next-auth": "^4.24.7",
+    "next-auth": "5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
+    "sonner": "^1.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
