base signup and signin done

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,9 @@ yarn-error.log*
 next-env.d.ts
 
 .eslintcache
+
 /ios
+/src/views
 /src/components/shared
 src/utils/get-page-by-slug.ts
 src/lib/_ApiService.ts
