--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/tabs": "^2.0.35",
     "@nextui-org/theme": "^2.2.9",
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.3",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
