--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "zod": "^3.23.8"
