--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "@nextui-org/card": "^2.0.33",
+    "@nextui-org/image": "^2.0.31",
     "@nextui-org/react": "^2.4.6",
+    "@nextui-org/spinner": "^2.0.33",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/tabs": "^2.0.35",
     "@nextui-org/theme": "^2.2.9",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.3",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
