--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.3",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
+    "lucide-react": "^0.429.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
     "react": "^18",
@@ -35,6 +38,8 @@
     "react-icons": "^5.3.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
