--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nextui-org/tabs": "^2.0.35",
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
