--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/card": "^2.0.33",
     "@nextui-org/image": "^2.0.31",
     "@nextui-org/react": "^2.4.6",
@@ -24,6 +25,7 @@
     "@nextui-org/tabs": "^2.0.35",
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.3",
@@ -36,6 +38,7 @@
     "next-auth": "5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
