--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@types/react-swipeable-views": "^0.13.5",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -42,6 +43,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
+    "react-swipeable-views": "^0.14.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
