--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@types/react-select": "^5.0.1",
     "@types/react-swipeable-views": "^0.13.5",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
@@ -44,7 +45,6 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.0",
-    "react-swipeable-views": "^0.14.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -78,6 +78,7 @@
     "lint-staged": "^15.2.7",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "react-swipeable-views": "^0.14.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.3",
     "typescript": "^5"
@@ -86,5 +87,8 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "peerDependencies": {
+    "react-swipeable-views": "^0.14.0"
   }
 }
