--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
