--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-auth": "5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.0",
