--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-google-autocomplete": "^2.7.3",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.0",
