--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "framer-motion": "^11.3.24",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
@@ -68,6 +69,7 @@
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
