--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "framer-motion": "^11.3.24",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
