--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@types/react-leaflet": "^3.0.0",
     "@types/react-select": "^5.0.1",
     "@types/react-swipeable-views": "^0.13.5",
     "class-variance-authority": "^0.7.0",
@@ -44,6 +45,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
@@ -54,6 +56,7 @@
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.8.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
@@ -71,6 +74,7 @@
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
