--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
-    "@types/react-leaflet": "^3.0.0",
     "@types/react-select": "^5.0.1",
     "@types/react-swipeable-views": "^0.13.5",
     "class-variance-authority": "^0.7.0",
@@ -51,12 +50,13 @@
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-google-autocomplete": "^2.7.3",
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
-    "react-leaflet": "^4.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
