--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@types/react-select": "^5.0.1",
     "@types/react-swipeable-views": "^0.13.5",
+    "aws-sdk": "^2.1687.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
