--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -41,6 +42,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.24",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
@@ -53,6 +55,7 @@
     "next-auth": "5.0.0-beta.4",
     "react": "^18",
     "react-datepicker": "^7.3.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-google-autocomplete": "^2.7.3",
     "react-google-places-autocomplete": "^4.0.1",
