--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.649.0",
+    "@aws-sdk/s3-request-presigner": "^3.649.0",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
@@ -51,8 +53,11 @@
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
+    "multer": "1.4.5-lts.1",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "8.10.1",
@@ -63,6 +68,7 @@
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
+    "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -81,6 +87,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.7",
+    "@types/multer": "^1.4.12",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
