--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
     "next-connect": "^1.0.0",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "8.10.1",
@@ -73,6 +74,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
@@ -90,6 +92,7 @@
     "@types/multer": "^1.4.12",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
