--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
+    "moment": "^2.30.1",
     "multer": "1.4.5-lts.1",
     "nanoid": "^5.0.7",
     "next": "14.2.5",
