--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
     "next-connect": "^1.0.0",
+    "next-pwa": "^5.6.0",
     "papaparse": "^5.4.1",
     "react": "^18",
     "react-datepicker": "^7.3.0",
