--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,52 @@
 {
   "name": "Evento-app",
   "short_name": "Evento",
+  "description": "Evento - Organize and discover events easily with our intuitive app.",
+  "lang": "en",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#5f6fed",
+  "theme_color": "#5f6fed",
+  "orientation": "portrait",
+  "scope": "/",
   "icons": [
+    {
+      "src": "/icon-96x96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "/icon-128x128.png",
+      "type": "image/png",
+      "sizes": "128x128"
+    },
+    {
+      "src": "/icon-144x144.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "/icon-152x152.png",
+      "type": "image/png",
+      "sizes": "152x152"
+    },
     {
       "src": "/icon-192x192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-384x384.png",
+      "type": "image/png",
+      "sizes": "384x384"
     },
     {
       "src": "/icon-512x512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000"
+  "categories": ["social", "events", "productivity"]
 }
