refactor: complete modification for eventDateComponent with timeZone

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^11.3.24",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
