--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.3.24",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
@@ -95,6 +96,7 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/cookie": "^0.6.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
