--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "date-fns-tz": "^3.2.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.3.24",
+    "heic2any": "^0.0.4",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
