--- a/public/manifest.json
+++ b/public/manifest.json
@@ -57,7 +57,7 @@
       "sizes": "192x192"
     },
     {
-      "src": "/icon-384x384.png",
+      "src": "/evento-logo.png",
       "type": "image/png",
       "sizes": "384x384"
     },
