--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.3",
     "sharp": "^0.33.5",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -110,6 +112,7 @@
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "commitizen": "^4.3.0",
