--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "next-sitemap": "^4.2.3",
     "papaparse": "^5.4.1",
     "react": "^18",
+    "react-confetti": "^6.4.0",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
