--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@ezstart/ez-tag": ["../../ez-libs/ez-tag/components/EzTag.tsx"]
+      "@/*": ["./src/*"]
+      // "@ezstart/ez-tag": ["../../ez-libs/ez-tag/components/EzTag.tsx"]
     },
     "plugins": [
       {
