--- a/package.json
+++ b/package.json
@@ -15,82 +15,82 @@
     "commit": "cz"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.649.0",
-    "@ezstart/ez-tag": "0.2.2",
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@aws-sdk/client-s3": "^3.797.0",
+    "@ezstart/ez-tag": "^0.2.3",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-scroll-area": "^1.2.6",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@react-google-maps/api": "^2.20.6",
-    "aws-sdk": "^2.1687.0",
-    "class-variance-authority": "^0.7.0",
+    "aws-sdk": "^2.1692.0",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "file-saver": "^2.0.5",
     "heic2any": "^0.0.4",
-    "input-otp": "^1.2.4",
+    "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^4.2.3",
-    "papaparse": "^5.4.1",
-    "react": "^18",
+    "papaparse": "^5.5.2",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18",
-    "react-easy-crop": "^5.1.0",
-    "react-hook-form": "^7.52.2",
+    "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.4.1",
+    "react-hook-form": "^7.56.1",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "socket.io-client": "^4.7.5",
-    "tailwind-merge": "^2.5.2",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "zod": "^3.24.3",
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/config-conventional": "^19.8.0",
     "@types/file-saver": "^2.0.7",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/lodash": "^4.17.7",
-    "@types/papaparse": "^5.3.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
+    "@types/papaparse": "^5.3.15",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "@types/react-slick": "^0.23.13",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
-    "commitizen": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.6.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.3",
-    "typescript": "^5.6.3"
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3"
   },
   "config": {
     "commitizen": {
