--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "ejs": "^3.1.10",
     "file-saver": "^2.0.5",
     "heic2any": "^0.0.4",
     "input-otp": "^1.4.2",
