--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "short_name": "Evento",
   "description": "Evento - Organize and discover events easily with our intuitive app.",
   "lang": "en",
-  "start_url": "/discover",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#F1F5F9",
   "theme_color": "#F1F5F9",
